argo-rollouts/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: faces-rollout
  namespace: faces
spec:
  replicas: 5
  strategy:
    canary:
      canaryService: color-canary
      stableService: color-stable
      plugins:
          argoproj-labs/gatewayAPI:
            httpRoute: color-route # our created httproute
            namespace: faces
      steps:
        - setWeight: 30
        - pause: {}
        - setWeight: 40
        - pause: { duration: 15 }
        - setWeight: 60
        - pause: { duration: 15 }
        - setWeight: 80
        - pause: { duration: 15 }
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      service: color
  template:
    metadata:
      labels:
        service: color
    spec:
      containers:
      - name: color
        image: dwflynn/faces-service:0.8.0
        ports:
        - containerPort: 8000
          name: http
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 250m
            memory: 128Mi
