argo-rollouts/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: color-route
  namespace: faces
spec:
  parentRefs:
    - name: color
      kind: Service
      group: ""
      port: 80
  rules:
    - backendRefs:
        - name: color-stable
          group: ""
          port: 80
          kind: Service
        - name: color-canary
          group: ""
          port: 80
          kind: Service
